force-app/main/default/objects/Procurement_Stage__c/Procurement_Stage__c.object-meta.xml
<CustomObject>
    <label>Procurement Stage</label>
    <nameField>
        <label>Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procurement Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>