force-app/main/default/objects/Procurement_Stage__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <inlineHelpText>Provides the actual end date for each stage based on progressing through the stages in the system. These are auto-populated dates</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>