force-app/main/default/objects/Procurement_Stage__c/fields/Alert_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date_2__c</fullName>
    <description>The date that the Stage-End Alert is to be sent.  Populated by the &apos;Calculate a Stage&apos;s Alert Date&apos; Process.  Used to trigger the &apos;Schedule Stage End Alert&apos; Process.</description>
    <inlineHelpText>The date that the Stage-End Email Alert is to be sent for this Stage.</inlineHelpText>
    <label>Alert Date</label>
    <type>Date</type>
</CustomField>