force-app/main/default/objects/Procurement_Stage__c/fields/Alert_Days__c.field-meta.xml
<CustomField>
    <fullName>Alert_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The number of working days, before this Stage&apos;s Planned End Date, that the &apos;Stage-End Alert&apos; email will be sent.</description>
    <inlineHelpText>The number of working days, before this Stage&apos;s Planned End Date, that the &apos;Stage-End Alert&apos; email will be sent.  Does not account for Bank Holidays.</inlineHelpText>
    <label>Alert Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>