force-app/main/default/objects/Procurement_Stage__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments box to allow Users enter a reason for any delays</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>