force-app/main/default/objects/Procurement_Stage__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirms if a stage has been completed by providing a ‘tick’</inlineHelpText>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>