force-app/main/default/objects/Procurement_Stage__c/fields/Completed_Icon__c.field-meta.xml
<CustomField>
    <fullName>Completed_Icon__c</fullName>
    <formula>IF(Completed__c = TRUE, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Y&quot;), 
IMAGE(&quot;/img/search_dismiss.gif&quot;, &quot;N&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed?</label>
    <type>Text</type>
</CustomField>