force-app/main/default/objects/Procurement_Stage__c/fields/Default_Duration__c.field-meta.xml
<CustomField>
    <fullName>Default_Duration__c</fullName>
    <description>Holds the default duration (in days) taken from the template custom settings. This is Read Only.</description>
    <inlineHelpText>Provides default duration for the stage based on the standard SLA. N.B additional stages will not show a default duration. If alt. SLA agreed with customer, duration override field will need to be populated within relevant stage prior to reaching stage</inlineHelpText>
    <label>Default Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>