force-app/main/default/objects/Procurement_Stage__c/fields/Delivery_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Duration__c</fullName>
    <description>days needed to finish stage</description>
    <label>Delivery Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>