force-app/main/default/objects/Procurement_Stage__c/fields/Duration_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_days__c</fullName>
    <formula>IF(Duration_Override__c &gt;=0 ,Duration_Override__c,Default_Duration__c )</formula>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>