force-app/main/default/objects/Procurement_Stage__c/fields/Duration_Override__c.field-meta.xml
<CustomField>
    <fullName>Duration_Override__c</fullName>
    <label>Duration Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>