force-app/main/default/objects/Procurement_Stage__c/fields/End_SLA2__c.field-meta.xml
<CustomField>
    <fullName>End_SLA2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End SLA2?</label>
    <type>Checkbox</type>
</CustomField>