force-app/main/default/objects/Procurement_Stage__c/fields/IsCurrentStage__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentStage__c</fullName>
    <description>Boolean showing whether stage is the current stage on the associated case</description>
    <formula>Procurement__r.Stage__r.Id =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentStage</label>
    <type>Checkbox</type>
</CustomField>