force-app/main/default/objects/Procurement_Stage__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Procurement_Stage__c.Procurement__c</field>
            <operation>equals</operation>
            <valueField>$Source.Procurement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procurement_Stage__c</referenceTo>
    <relationshipLabel>Procurement Stages</relationshipLabel>
    <relationshipName>Previous_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>