force-app/main/default/objects/Procurement_Stage__c/fields/Original_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Date__c</fullName>
    <inlineHelpText>Provides the original start dates for each stage of the procurement following discussion with the customer. N.B The dates are pre-populated based on the standard SLA duration to enable this discussion</inlineHelpText>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>