force-app/main/default/objects/Procurement_Stage__c/fields/Original_Dates_Filled__c.field-meta.xml
<CustomField>
    <fullName>Original_Dates_Filled__c</fullName>
    <description>If either original start date or end date has not been entered then set to 0 else 1. Used in roll up summary on case to  determine whether any dates are missing.</description>
    <formula>IF(OR( ISBLANK(Original_Date__c),ISBLANK(Original_End_Date__c)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Dates Filled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>