force-app/main/default/objects/Procurement_Stage__c/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <inlineHelpText>Provides the original end dates for each stage of the procurement following discussion with the customer. N.B The dates are pre-populated based on the standard SLA duration against each stage</inlineHelpText>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>