force-app/main/default/objects/Procurement_Stage__c/fields/Planned_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Actual_End_Date__c</fullName>
    <label>Planned/Actual End Date</label>
    <type>Date</type>
</CustomField>