force-app/main/default/objects/Procurement_Stage__c/fields/Planned_End_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date_Day__c</fullName>
    <formula>CASE( 
MOD( Planned_End_Date__c - DATE( 1900, 1, 8 ), 7 ), 
0, &quot;Monday&quot;, 
1, &quot;Tuesday&quot;, 
2, &quot;Wednesday&quot;, 
3, &quot;Thursday&quot;, 
4, &quot;Friday&quot;, 
5, &quot;Saturday&quot;, 
6, &quot;Sunday&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The day of the week of this stage&apos;s Planned End Date.</inlineHelpText>
    <label>Planned End Date Day</label>
    <type>Text</type>
</CustomField>