force-app/main/default/objects/Procurement_Stage__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <inlineHelpText>Provides the ‘agreed’ planned start dates for each stage of the procurement. These dates will populate once the ‘agree stage dates’ button has been selected</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>