force-app/main/default/objects/Procurement_Stage__c/fields/Procurement_Status__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Status__c</fullName>
    <description>The status of this Stage&apos;s parent Procurement
Populated by one of two processes:
‘New Stage Created - Populate Procurement Status on Stage’
‘Case Status is Changed - Populate Procurement Status on Stage’</description>
    <inlineHelpText>The status of this Stage&apos;s parent Procurement</inlineHelpText>
    <label>Procurement Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>