force-app/main/default/objects/Procurement_Stage__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <inlineHelpText>Provides the unique sequence for the specific stage within the procurement process</inlineHelpText>
    <label>Seq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>