force-app/main/default/objects/Procurement_Stage__c/fields/Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>Stage_Id__c</fullName>
    <description>only for stages created from template</description>
    <label>Stage Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>