force-app/main/default/objects/Procurement_Stage__c/fields/Stage_with_seq__c.field-meta.xml
<CustomField>
    <fullName>Stage_with_seq__c</fullName>
    <formula>RIGHT(TEXT(Seq__c +1000),3) + &quot;-&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage (with seq)</label>
    <type>Text</type>
</CustomField>