force-app/main/default/objects/Procurement_Stage__c/fields/Start_SLA2__c.field-meta.xml
<CustomField>
    <fullName>Start_SLA2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start SLA2?</label>
    <type>Checkbox</type>
</CustomField>