force-app/main/default/objects/Procurement_Stage__c/fields/UserIsCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>UserIsCaseOwner__c</fullName>
    <description>Boolean to indicate whether current user is the case owner</description>
    <formula>$User.Id =  Procurement__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserIsCaseOwner</label>
    <type>Checkbox</type>
</CustomField>