force-app/main/default/objects/Procurement_Stage__c/validationRules/Only_custom_stage_names_can_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_custom_stage_names_can_be_changed</fullName>
    <active>true</active>
    <description>Only custom stage names can be changed</description>
    <errorConditionFormula>AND( ISCHANGED(Name),  NOT(ISBLANK(Stage_Id__c) ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Only custom stage names can be changed</errorMessage>
</ValidationRule>