force-app/main/default/objects/Procurement_Stage__c/validationRules/Prevent_changes_to_original_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changes_to_original_dates</fullName>
    <active>true</active>
    <description>Once planned dates have been set, prevent further changes to original dates</description>
    <errorConditionFormula>AND( Procurement__r.Planned_Dates_Already_Set__c =TRUE, OR( ISCHANGED(Original_Date__c),ISCHANGED(Original_End_Date__c)))</errorConditionFormula>
    <errorMessage>Original dates cannot be amended after the planned dates have been set</errorMessage>
</ValidationRule>